# umakaviewer

./: .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .gitmodules  README.md  dev.docker-compose.yml  docker-compose.yml  package.json
.circleci/: config.yml
server/: Dockerfile  Makefile  alembic.ini  entrypoint.sh  manage.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 16a59bb00069_add_display_name_and_contact_uri.py  39acfd4597da_add_virtual_column_for_dataset.py  4020005878ff_initial.py  5f713c0ac818_modify_user.py  777453724560_change_dataset_title_length.py  a204ed7503be_add_dataset_multi_column_index.py  a310b12dbee7_modify_dataset.py  bad466dcd0cd_add_userrole.py  bdab99f87e3e_add_is_public_column_to_dataset.py  e6f9efcfc37f_add_tag_table_and_dataset_tag_.py
server/dbcls/: __init__.py  config.py  constants.py  datetimeformat.py  models.py  tasks.py  utils.py
server/dbcls/api/: app.py
server/dbcls/api/resources/: admin.py  authenticate.py  data_set.py  proxy.py  signup.py  user.py
server/dbcls/templates/: base.html  change_email.html  change_email_completion.html  change_email_confirm.html  change_password.html  change_password_completion.html  create_account.html  delete_account.html  file_list.html  graph.html  index.html  layout.html  login.html  reset_password.html  reset_password_action.html  reset_password_completion.html  reset_password_confirm.html
server/tests/: fixtures.py  ontology.ttl  sbm.ttl  test_admin.py  test_authenticate.py  test_data_sets.py  test_healthy.py  test_me.py  test_signup.py  test_tasks.py
(+221 files in other folders)
