[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
SQLAlchemy = "^1.3"
rdflib = "^5.0"
Flask-SQLAlchemy = "^2.4"
alembic = "^1.0"
flask-script = "^2.0"
firebase-admin = "^4.5"
flask-restful = "^0.3.7"
flask-cors = "^3.0"
pytz = "^2019.2"
redis = "^3.3"
PyMySQL = "^1.0.0"
umakaparser = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-mock = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
