[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
SQLAlchemy = "^1.3"
Flask-SQLAlchemy = "^2.4"
alembic = "^1.0"
flask-script = "^2.0"
firebase-admin = "^2.17"
flask-restful = "^0.3.7"
flask-cors = "^3.0"
pytz = "^2019.2"
redis = "^3.3"
PyMySQL = "^0.10.1"
umakaparser = "^0.2.2"
SPARQLWrapper = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-mock = "^1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
